bin/tests/snapshots/useless_parens__lint_6c7cbb8c73d0335dbaafbcb2b65385fee20f9cce6f7595f734f5d64161b0bd62.snap
---
source: bin/tests/useless_parens.rs
---
let h = ({ inherit (builtins) map; }); in null

---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:9]
   │
 1 │ let h = ({ inherit (builtins) map; }); in null
   ·         ──────────────┬──────────────  
   ·                       ╰──────────────── Useless parentheses around value in binding
───╯
