bin/tests/snapshots/useless_parens__lint_a00af5ff8a77ce04305ce009f5cd54c74661f23c2322608d6b7441445f8c5998.snap
---
source: bin/tests/useless_parens.rs
---
let a = (1 + 2); in null

---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:9]
   │
 1 │ let a = (1 + 2); in null
   ·         ───┬───  
   ·            ╰───── Useless parentheses around value in binding
───╯
