bin/tests/snapshots/useless_parens__lint_cf4cad9db99ea1f46ec3df3e1fbd7bdb5a0f4a2f9a595376cf7bdc005ee29bf9.snap
---
source: bin/tests/useless_parens.rs
---
("hello")

---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ("hello")
   · ────┬────  
   ·     ╰────── Useless parentheses around primitive expression
───╯
