bin/tests/snapshots/useless_parens__lint_e84f99f21941256655bcb78799af749687b9632b027a0932bf05606f8fbcfaf4.snap
---
source: bin/tests/useless_parens.rs
---
[(builtins.map)]

---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:2]
   │
 1 │ [(builtins.map)]
   ·  ───────┬──────  
   ·         ╰──────── Useless parentheses around primitive expression
───╯
